<resources>
    <string name="app_name">LibrosApp</string>
    <string name="titulo">Buscador de Libros</string>
    <string name="buscar">Clickea la lupa para buscar</string>
    <string name="enviarcorreo">enviarcorreo</string>
    <string name="volver">volver</string>
    <string name="direccioncorreo">Destinatarios</string>
    <string name="to">Para:</string>
    <string name="subject">Asunto:</string>
    <string name="asunto">Asunto</string>
    <string name="mensaje">Mensaje:</string>
    <string name="cuerpomensaje">Escribe un mensaje</string>
    <string name="botonenviar">ENVIAR</string>
    <string name="titulolibro">Titulo</string>
    <string name="Autor">Autor:</string>
    <string name="Editorial">Editorial:</string>
    <string name="paginas">Páginas:</string>
    <string name="imagen"></string>
    <string name="Categpria">Categoría:</string>
    <string name="valoracion">Valoración:</string>
    <string name="descripcion">Lorem Ipsum</string>
</resources>