<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#0AC2DC"
    android:backgroundTint="#0AC2DC"
    tools:context=".CorreoActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="25dp"
        android:contentDescription="@string/titulo"
        android:src="@mipmap/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="25sp"
        android:text="@string/to"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/introducircorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/direccioncorreo"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="25sp"
        android:text="@string/subject"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/introducirasunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/asunto"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:background="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="25sp"
        android:text="@string/mensaje"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/introducirmensaje"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/cuerpomensaje"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:lines="10"
        android:gravity="start"
        android:background="@color/white" />

    <Button
        android:id="@+id/botonenviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:text="@string/botonenviar"
        android:textSize="22sp"
        android:padding="10dp"
        android:backgroundTint="#162473"/>


</LinearLayout>