<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDescripcionLibro"
    android:orientation="vertical"
    android:background="#0AC2DC"
    android:backgroundTint="#0AC2DC">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="25dp">

        <TextView
            android:id="@+id/titulolibro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoSizeTextType="uniform"
            android:text="@string/titulolibro"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="30sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="25dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" />

        <ImageView
            android:id="@+id/imagenlibro"
            android:layout_width="130dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/imagen" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/autor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/Autor"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombreautor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Autor"
                android:textSize="20sp"
                tools:text="NombreAutor" />

            <TextView
                android:id="@+id/editorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Editorial"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombreeditorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Editorial"
                android:textSize="20sp"
                tools:text="NombreEditorial" />

            <TextView
                android:id="@+id/paginas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/paginas"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Numpaginas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paginas"
                android:textSize="20sp"
                tools:text="NumDePaginas" />

            <TextView
                android:id="@+id/categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/Categpria"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/NombreCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Categpria"
                android:textSize="20sp"
                tools:text="NombreCategoria" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="25dp">

            <RatingBar
                android:id="@+id/ratingBar"
                android:numStars="5"
                android:rating="2.5"
                android:isIndicator="true"
                android:stepSize="0.5"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:progressTint="#FFE082"
                android:progressBackgroundTint="#D1CECE"
                android:layout_height="45dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="25dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" >

            <TextView
                android:id="@+id/descripcionlibro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:text="@string/descripcion"
                android:textSize="23sp"
                tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into..." />
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>